move print function to its own cpp

--- a/ModulesTalk/ModulesTalk.vcxproj.filters
+++ b/ModulesTalk/ModulesTalk.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="numbers.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="printer.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
