--- a/ModulesTalk/ModulesTalk.vcxproj.filters
+++ b/ModulesTalk/ModulesTalk.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="printer.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="more_numbers.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
