--- a/ModulesTalk/ModulesTalk.vcxproj
+++ b/ModulesTalk/ModulesTalk.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="numbers.cpp" />
     <ClCompile Include="numbers.ixx" />
     <ClCompile Include="ModulesTalk.cpp" />
+    <ClCompile Include="printer.ixx" />
     <ClCompile Include="printer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
