--- a/ModulesTalk/ModulesTalk.vcxproj.filters
+++ b/ModulesTalk/ModulesTalk.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="more_numbers.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="printer.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
